--- a/custom_components/gelonsoftmihome/manifest.json
+++ b/custom_components/gelonsoftmihome/manifest.json
@@ -4,6 +4,8 @@
   "name": "GelonsoftMiHome",
   "documentation": "https://github.com/gelonsoft/mihome_home_assistant",
   "requirements": [
+    "Crypto>=0.0.1",
+    "PyYAML~=5.4.1"
   ],
   "issue_tracker": "https://github.com/gelonsoft/mihome_home_assistant/issues",
   "dependencies": [],
