--- a/custom_components/gelonsoftmihome/manifest.json
+++ b/custom_components/gelonsoftmihome/manifest.json
@@ -8,6 +8,7 @@
     "requests~=2.25.1",
     "pybase64~=1.1.4",
     "bcrypt~=3.1.7",
+    "pycryptodome~=3.9.9",
     "PyYAML~=5.4.1"
   ],
   "issue_tracker": "https://github.com/gelonsoft/mihome_home_assistant/issues",
